--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,7 @@
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
+		<div id="portal"></div>
 
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
